maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:27: error: illegal start of simple expression
    } else [ followTheLeftSide(); ]
           ^IslandMaze:27: error: illegal start of statement
    } else [ followTheLeftSide(); ]
                                  ^